// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`English render 1`] = `
<div>
  <button
    class="_button_4123ea"
  >
    <span
      class="_buttonIconSearch_4123ea"
    />
    <span
      class="_buttonText_4123ea"
    >
      Search
    </span>
  </button>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <button
    class="_button_4123ea"
  >
    <span
      class="_buttonIconSearch_4123ea"
    />
    <span
      class="_buttonText_4123ea"
    >
      Søk
    </span>
  </button>
</div>
`;
